--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.scss
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.scss
@@ -24,9 +24,9 @@ ul li {
     cursor: pointer;
 
     color: var(--mona-text);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .mona-sub-tree-container {
-    margin-top: 1px;
+    margin-top: 0.0625rem;
 }
