--- a/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.scss
+++ b/projects/mona-ui/src/lib/date-inputs/calendar/calendar.component.scss
@@ -10,7 +10,7 @@
         pointer-events: none;
         & th {
             text-transform: uppercase;
-            padding: 0 0 4px 0;
+            padding: 0 0 0.25rem 0;
             font-weight: 600;
             box-shadow: inset 0 -1px 0 var(--mona-text);
             color: var(--mona-text);
@@ -24,7 +24,7 @@
     }
     & tbody {
         td {
-            padding: 4px 0;
+            padding: 0.25rem 0;
             cursor: pointer;
             &.mona-calendar-other-month {
                 color: var(--mona-text);
@@ -32,7 +32,7 @@
             }
         }
         & tr:first-child td {
-            margin-top: 4px;
+            margin-top: 0.25rem;
         }
     }
 }
