--- a/projects/mona-ui/src/lib/date-inputs/time-selector/time-selector.component.scss
+++ b/projects/mona-ui/src/lib/date-inputs/time-selector/time-selector.component.scss
@@ -8,6 +8,6 @@ ol {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 4px 0;
+        padding: 0.25rem 0;
     }
 }
