--- a/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.scss
+++ b/projects/mona-ui/src/lib/layout/splitter/components/splitter/splitter.component.scss
@@ -6,7 +6,7 @@
         flex-shrink: 0;
     }
     &.mona-splitter-hidden {
-        flex: 0 1 0% !important;
+        flex: 0 1 0 !important;
         overflow: hidden !important;
     }
 }
