--- a/projects/mona-ui/src/lib/pager/components/pager/pager.component.scss
+++ b/projects/mona-ui/src/lib/pager/components/pager/pager.component.scss
@@ -9,12 +9,12 @@
 }
 
 mona-numeric-text-box {
-    margin-left: 20px;
+    margin-left: 1rem;
     width: 50px;
 }
 
 mona-drop-down-list {
-    margin: 0 5px;
+    margin: 0 0.25rem;
 }
 
 .mona-pager-input {
@@ -22,10 +22,10 @@ mona-drop-down-list {
     align-items: center;
     & mona-numeric-text-box {
         width: 50px;
-        margin: 0 5px;
+        margin: 0 0.25rem;
     }
     & span {
-        margin: 0 5px;
+        margin: 0 0.25rem;
     }
 }
 
@@ -34,5 +34,5 @@ mona-drop-down-list {
     align-items: center;
     justify-content: flex-end;
     flex: 1 1 0;
-    padding-left: 10px;
+    padding-left: 0.5rem;
 }
