--- a/projects/mona-ui/src/lib/tooltips/popover/components/popover/popover.component.scss
+++ b/projects/mona-ui/src/lib/tooltips/popover/components/popover/popover.component.scss
@@ -12,9 +12,9 @@ div.mona-popover-content {
 }
 
 div.mona-popover-title {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
-    padding: 8px 12px;
+    padding: 0.5rem 0.75rem;
     display: flex;
     align-items: center;
 }
