--- a/projects/mona-ui/src/lib/common/list/components/list/list.component.scss
+++ b/projects/mona-ui/src/lib/common/list/components/list/list.component.scss
@@ -6,7 +6,7 @@ ul {
     height: 100%;
     outline: none;
     & li {
-        padding: 4px 8px;
+        padding: 0.25rem 0.5rem;
         user-select: none;
         cursor: pointer;
     }
@@ -17,7 +17,7 @@ ul {
 
 mona-filter-input {
     display: block;
-    padding: 4px;
+    padding: 0.25rem;
     border-bottom: 1px solid var(--mona-border-color);
 }
 
