--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 0 8px;
+    padding: 0 0.5rem;
     cursor: pointer;
     user-select: none;
     overflow: hidden;
