--- a/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 1px 2px;
+    padding: 0.0625rem 0.125rem;
     cursor: pointer;
     & > div:first-child {
         display: flex;
@@ -13,7 +13,7 @@
     }
     & mona-chip {
         &:not(:last-child) {
-            margin: 0 1px 0 0;
+            margin: 0 0.0625rem 0 0;
         }
     }
 }
