--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    padding: 6px 11px;
+    padding: 0.375rem 0.6875rem;
     outline: none;
     height: 100%;
 }
@@ -19,7 +19,7 @@
 }
 
 .mona-grid-cell-editing {
-    padding: 1px;
+    padding: 0.0625rem;
 }
 
 
