--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -1,15 +1,18 @@
 .mona-grid-group-panel {
     display: flex;
     align-items: center;
-    padding: 5px 5px;
+    padding: 0.25rem;
     height: 40px;
     border-bottom: 1px solid var(--mona-border-color);
     & mona-chip {
-        margin-right: 5px;
+        margin-right: 0.25rem;
     }
 }
 
 .mona-grid-group-panel-placeholder {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     opacity: 0.7;
 }
 
@@ -68,7 +71,7 @@ mona-grid-list {
 
 .mona-grid-column-title {
     flex: 1;
-    padding: 5px 11px;
+    padding: 0.25rem 0.5rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -79,7 +82,7 @@ mona-grid-list {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 4px;
+    padding: 0 0.25rem;
 }
 
 .mona-grid-column-drop-hint {
