--- a/projects/mona-ui/src/lib/inputs/check-box/components/check-box/check-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/check-box/components/check-box/check-box.component.scss
@@ -1,6 +1,6 @@
 .mona-check-box-label {
     display: inline-flex;
-    gap: 4px;
+    gap: 0.25rem;
     cursor: pointer;
     user-select: none;
 }
