--- a/projects/mona-ui/src/lib/inputs/color-picker/color-picker.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-picker/color-picker.component.scss
@@ -9,7 +9,7 @@
     display: flex;
     width: 1.42857em;
     height: 1.42857em;
-    margin-left: 4px;
+    margin-left: 0.25rem;
 }
 
 mona-color-gradient {
