--- a/projects/mona-ui/src/lib/inputs/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
+++ b/projects/mona-ui/src/lib/inputs/numeric-text-box/components/numeric-text-box/numeric-text-box.component.scss
@@ -10,8 +10,8 @@
         border-right: none;
         border-left: none;
         flex: 1 1 50%;
-        padding: 1px 8px;
-        font-size: 10px;
+        padding: 0.0625rem 0.5rem;
+        font-size: 0.625em;
 
         & fa-icon {
             display: flex;
@@ -25,7 +25,7 @@
         &:last-child {
             border-bottom: none;
             & fa-icon {
-                margin-top: -1px;
+                margin-top: -0.0625rem;
             }
         }
 
