--- a/projects/mona-ui/src/lib/inputs/radio-button/components/radio-button/radio-button.component.scss
+++ b/projects/mona-ui/src/lib/inputs/radio-button/components/radio-button/radio-button.component.scss
@@ -1,6 +1,6 @@
 .mona-radio-button-label {
     display: inline-flex;
-    gap: 4px;
+    gap: 0.25rem;
     cursor: pointer;
     user-select: none;
 }
