--- a/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    padding: 0 0.5rem;
     background: var(--mona-background-dark);
     border-bottom: 1px solid var(--mona-border-color);
     color: var(--mona-text);
@@ -12,7 +12,7 @@
 }
 
 .mona-expansion-panel-header-title {
-    padding: 4px;
+    padding: 0.25rem;
 }
 
 .mona-expansion-panel-content {
