--- a/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.scss
+++ b/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.scss
@@ -21,7 +21,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    padding: 0 8px;
+    padding: 0 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,7 @@
     user-select: none;
 
     & fa-icon {
-        font-size: 32px;
+        font-size: 2em;
         opacity: 0.4;
         transition: opacity 0.2s ease-in-out;
         &:hover {
@@ -76,7 +76,7 @@
     list-style: none;
     overflow: hidden;
     flex-wrap: nowrap;
-    padding: 12px 4px;
+    padding: 0.75rem 0.25rem;
 
     & li {
         content: " ";
@@ -84,14 +84,14 @@
         height: 12px;
         flex:  0 0 12px;
         &:not(:last-child) {
-            margin-right: 12px;
+            margin-right: 0.75rem;
         }
         cursor: pointer;
     }
 }
 
 .mona-scroll-view-pager-arrow {
-    padding: 10px 8px;
+    padding: 0.5rem 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
