--- a/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.scss
+++ b/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.scss
@@ -28,16 +28,16 @@
             align-items: center;
             justify-content: center;
             & fa-icon {
-                margin-top: 2px;
+                margin-top: 0.125rem;
             }
-            padding-top: 2px;
-            padding-bottom: 2px;
+            padding-top: 0.125rem;
+            padding-bottom: 0.125rem;
         }
     }
 }
 
 .mona-tab-title {
-    padding: 6px 10px 4px;
+    padding: 0.25rem 0.5rem 0.25rem;
 }
 
 .mona-tab-strip-scroll {
