--- a/projects/mona-ui/src/lib/menus/context-menu-item/context-menu-item.component.scss
+++ b/projects/mona-ui/src/lib/menus/context-menu-item/context-menu-item.component.scss
@@ -13,7 +13,7 @@
     }
 
     &-text {
-        padding: 0 10px;
+        padding: 0 0.5rem;
         flex: 1;
         white-space: nowrap;
         overflow: hidden;
@@ -36,10 +36,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-left: -5px;
+            margin-left: -0.25rem;
         }
         & fa-icon {
-            font-size: 12px;
+            font-size: 0.75rem;
             line-height: 1.667;
         }
     }
@@ -49,7 +49,7 @@
     display: block;
     height: 1px;
     width: 100%;
-    margin: 4px 0;
+    margin: 0.25rem 0;
     color: var(--mona-border-color);
     border-top: 1px solid var(--mona-border-color);
 }
