--- a/projects/mona-ui/src/lib/menus/menubar/menubar.component.scss
+++ b/projects/mona-ui/src/lib/menus/menubar/menubar.component.scss
@@ -10,6 +10,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 4px 10px;
+        padding: 0.25rem 0.5rem;
     }
 }
