--- a/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
+++ b/projects/mona-ui/src/lib/notification/components/notification/notification.component.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
     color: var(--mona-text);
@@ -14,7 +14,7 @@
 .mona-notification-inner {
     display: flex;
     flex: 1;
-    padding: 10px;
+    padding: 0.5rem;
 }
 
 .mona-notification-line {
@@ -38,7 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 16px;
+    padding: 0 1rem;
     &-success {
         color: var(--mona-success);
     }
@@ -59,7 +59,7 @@
     align-items: center;
     & fa-icon {
         cursor: pointer;
-        margin-top: -4px;
+        margin-top: -0.25rem;
     }
 }
 
@@ -75,7 +75,7 @@
     flex-direction: row;
     flex: 1;
     align-items: center;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 600;
     user-select: none;
 }
