--- a/projects/mona-ui/src/lib/progress-bars/progress-bar/components/progress-bar/progress-bar.component.scss
+++ b/projects/mona-ui/src/lib/progress-bars/progress-bar/components/progress-bar/progress-bar.component.scss
@@ -1,5 +1,5 @@
 .mona-progress-bar-track {
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 400;
     display: flex;
     align-items: center;
@@ -24,18 +24,18 @@
 }
 
 .mona-progress-bar-label {
-    padding: 0 4px;
+    padding: 0 0.25rem;
 }
 
 .mona-progress-bar-label-hidden {
-    padding: 10px 0;
+    padding: 0.5rem 0;
 }
 
 .mona-progress-bar-indeterminate {
     background-size: 200% 200%;
     animation: indeterminate 16s linear infinite;
     animation-direction: reverse;
-    padding: 10px 0;
+    padding: 0.5rem 0;
 }
 
 @keyframes indeterminate {
