--- a/projects/mona-ui/src/lib/tooltips/tooltip/tooltip.component.scss
+++ b/projects/mona-ui/src/lib/tooltips/tooltip/tooltip.component.scss
@@ -5,7 +5,7 @@ div.mona-tooltip {
 div.mona-tooltip-content {
     width: 100%;
     height: 100%;
-    padding: 8px 10px;
+    padding: 0.5rem 0.75rem;
     position: relative;
     z-index: 1;
 }
