--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
@@ -20,7 +20,7 @@
 
 .mona-window-title-container {
     flex: 1;
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     height: 100%;
     display: flex;
     align-items: center;
@@ -42,7 +42,7 @@
 .mona-window-content {
     flex: 1;
     overflow: auto;
-    padding: 10px;
+    padding: 0.5rem;
 }
 
 .mona-window-resizer {
