--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -30,12 +30,12 @@ input, textarea, button {
 }
 
 @mixin font-small {
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 1.667;
 }
 
 @mixin font-medium {
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 1.428571429;
 }
 
@@ -122,7 +122,7 @@ input, textarea, button {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     flex: 1;
     overflow: hidden;
     & > span {
@@ -216,7 +216,7 @@ mona-filter-input.mona-list-filter-input {
 }
 
 .mona-tree-node {
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     &:hover:not(.mona-disabled):not(.mona-selected) {
         background-color: var(--mona-background-hover-darker);
         &:not(.mona-highlighted) {
@@ -261,14 +261,14 @@ mona-filter-input.mona-list-filter-input {
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
     box-shadow: var(--mona-popup-shadow);
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--mona-text);
     top: 10px;
     & fa-icon {
-        margin-right: 4px;
+        margin-right: 0.25rem;
     }
 }
 
@@ -287,7 +287,7 @@ mona-filter-input.mona-list-filter-input {
     text-overflow: ellipsis;
 
     @include font-medium;
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
 
     transition: background-color 0.15s ease-out, border 0.15s ease-out, color 0.15s ease-out, box-shadow 0.15s ease-out;
 
@@ -379,7 +379,7 @@ mona-filter-input.mona-list-filter-input {
     transition: box-shadow 0.15s ease-in;
 
     & .mona-chip-content {
-        font-size: 12px;
+        font-size: 0.75rem;
         line-height: 1;
     }
 
@@ -476,7 +476,7 @@ ul.mona-list mona-text-box.filter-box {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    padding: 0 8px;
+    padding: 0 0.5rem;
     cursor: pointer;
     color: var(--mona-text);
     @include font-small;
@@ -572,10 +572,10 @@ ul.mona-list mona-text-box.filter-box {
     & mona-text-box {
         width: 100%;
         & input[monaTextBox] {
-            padding: 4.5px 8px;
+            padding: 0.25rem 0.5rem;
         }
         & button[monaButton] {
-            padding: 0.25em 0.5em;
+            padding: 0.25rem 0.5rem;
         }
     }
 }
@@ -596,7 +596,7 @@ ul.mona-list mona-text-box.filter-box {
 }
 
 .mona-calendar-popup-wrapper {
-    padding: 8px;
+    padding: 0.5rem;
 }
 
 /** Time Selector */
@@ -607,12 +607,12 @@ ul.mona-list mona-text-box.filter-box {
     overflow: hidden;
     & mona-button-group {
         & button {
-            padding: 0 8px;
+            padding: 0 0.5rem;
         }
     }
     & ol {
         @include scrollbars;
-        font-size: 14px;
+        font-size: 0.875em;
         user-select: none;
         & li {
             cursor: pointer;
@@ -694,21 +694,21 @@ ul.mona-list mona-text-box.filter-box {
     display: flex;
     flex-direction: column;
     & div.mona-dropdown-tree-filter {
-        padding: 4px;
+        padding: 0.25rem;
         border-bottom: 1px solid var(--mona-border-color);
     }
     & div.mona-dropdown-tree-container {
         overflow: auto;
         max-height: 200px;
         width: 100%;
-        padding: 4px;
+        padding: 0.25rem;
         @include scrollbars;
     }
 }
 
 mona-filter-input.mona-popup-filter-input,
 .mona-dropdown-tree-popup-content mona-filter-input {
-    & div.mona-text-box {
+    & mona-text-box {
         background-color: var(--mona-background-lighter);
         & input {
             background-color: transparent;
@@ -718,6 +718,7 @@ mona-filter-input.mona-popup-filter-input,
 
 /** Multi Select */
 .mona-multi-select {
+    overflow: hidden;
     & .mona-input-selector {
         &:hover,
         &:active {
@@ -732,9 +733,7 @@ mona-filter-input.mona-popup-filter-input,
             }
         }
         & mona-chip {
-            & div.mona-chip {
-                margin-top: 0.5px;
-            }
+            margin-top: 0.0625rem;
         }
     }
     & .mona-input-selector-icon {
@@ -745,10 +744,10 @@ mona-filter-input.mona-popup-filter-input,
 /** Filters */
 .mona-filter-menu {
     width: 100%;
-    padding: 5px;
+    padding: 0.25rem;
     display: flex;
     flex-direction: column;
-    row-gap: 5px;
+    row-gap: 0.5rem;
 }
 .mona-filter-menu-item {
     & mona-button-group {
@@ -832,23 +831,19 @@ mona-filter-input.mona-popup-filter-input,
 
 .mona-grid-cell-editing {
     & mona-text-box {
-        & div.mona-text-box {
-            border: none;
-        }
+        border: none;
         & input {
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
             background: var(--mona-background-lighter);
         }
     }
 
     & mona-numeric-text-box {
-        & div.mona-numeric-text-box {
-            border: none;
-        }
+        border: none;
         & input {
-            padding-left: 10px;
-            padding-right: 10px;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
             background: var(--mona-background-lighter);
         }
     }
@@ -866,7 +861,7 @@ input[type="checkbox"][monaCheckBox] {
     display: inline-block;
     place-content: center;
     cursor: pointer;
-    margin-right: 4px;
+    margin-right: 0.25rem;
     outline: none;
     &::before {
         content: "\2714";
@@ -878,7 +873,7 @@ input[type="checkbox"][monaCheckBox] {
         background: var(--mona-background);
         box-shadow: inset 0 0 0 1px var(--mona-border-color);
         border-radius: var(--mona-border-radius);
-        padding-bottom: 1px;
+        padding-bottom: 0.0625rem;
         place-content: center;
     }
     &:checked::before {
@@ -916,8 +911,8 @@ input[type="checkbox"][monaCheckBox] {
     display: flex;
     flex-direction: column;
     user-select: none;
-    padding: 10px;
-    row-gap: 8px;
+    padding: 0.5rem;
+    row-gap: 0.5rem;
     background: var(--mona-background-dark);
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
@@ -966,7 +961,7 @@ input[type="checkbox"][monaCheckBox] {
 .mona-color-palette {
     display: grid;
     grid-gap: 1px;
-    padding: 1px;
+    padding: 0.0625rem;
     & > .mona-color-cell {
         &.mona-selected {
             box-shadow: 0 0 0 1px var(--mona-border-color) inset;
@@ -998,7 +993,7 @@ input[type="checkbox"][monaCheckBox] {
 }
 
 .mona-color-picker-popup-wrapper {
-    padding: 2px;
+    padding: 0.125rem;
 }
 
 /** Numeric Text Box */
@@ -1041,7 +1036,7 @@ input[type="radio"][monaRadioButton] {
     display: inline-block;
     place-content: center;
     cursor: pointer;
-    margin-right: 4px;
+    margin-right: 0.25rem;
     outline: none;
     &::before {
         content: " ";
@@ -1218,7 +1213,7 @@ input[type="radio"][monaRadioButton] {
     width: 60px;
     height: 30px;
     display: flex;
-    padding: 2px;
+    padding: 0.125rem;
     align-items: center;
     cursor: pointer;
     user-select: none;
@@ -1257,7 +1252,7 @@ input[type="radio"][monaRadioButton] {
 
 /** Text Area */
 textarea[monaTextArea] {
-    padding: 4px;
+    padding: 0.25rem;
     background-color: var(--mona-background);
     color: var(--mona-text);
     border: 1px solid var(--mona-border-color);
@@ -1286,7 +1281,7 @@ input[monaTextBox] {
     background-color: var(--mona-background);
     color: var(--mona-text);
     transition: box-shadow 0.15s ease-in-out;
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     @include font-medium;
 
     &:focus:not(:disabled),
@@ -1413,7 +1408,7 @@ button[monaButton].mona-input-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
+    padding: 0.5rem;
     & .mona-placeholder-text {
         font-weight: 600;
         color: var(--mona-text);
@@ -1582,7 +1577,6 @@ button[monaButton].mona-input-button {
     }
     &-vertical-reverse {
         border-bottom-color: transparent;
-
         border-top-left-radius: var(--mona-border-radius);
         border-top-right-radius: var(--mona-border-radius);
     }
@@ -1641,9 +1635,6 @@ button[monaButton].mona-input-button {
 .mona-contextmenu-content {
     user-select: none;
     overflow: hidden;
-    //padding: 4px 0 !important;
-    //background: var(--mona-background);
-    //border: 1px solid var(--mona-border-color);
 }
 
 .mona-contextmenu-item {
@@ -1661,7 +1652,7 @@ ul.mona-contextmenu-list {
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
-    padding: 4px 0;
+    padding: 0.25rem 0;
 }
 
 .mona-contextmenu-list-item {
@@ -1717,7 +1708,7 @@ ul.mona-contextmenu-list {
 /** Notification */
 .mona-notification-container {
     position: absolute;
-    padding: 10px;
+    padding: 0.5rem;
     z-index: 40000;
     overflow: hidden;
     &.bottomleft {
@@ -1741,7 +1732,7 @@ ul.mona-contextmenu-list {
 
 .mona-notification-icon {
     & fa-icon svg {
-        font-size: 20px;
+        font-size: 1.25em;
     }
 }
 
@@ -1754,7 +1745,7 @@ ul.mona-contextmenu-list {
 /** Pager */
 .mona-pager {
     display: flex;
-    padding: 5px 10px;
+    padding: 0.25rem 0.5rem;
     background: var(--mona-background);
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
@@ -1778,7 +1769,7 @@ ul.mona-contextmenu-list {
 }
 
 .mona-popup-wrapper {
-    transform-origin: 50% 0%;
+    transform-origin: 50% 0;
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
@@ -1961,14 +1952,14 @@ div.mona-tree-view-node-dropping {
     border: 1px solid var(--mona-border-color);
     border-radius: var(--mona-border-radius);
     box-shadow: var(--mona-popup-shadow);
-    padding: 4px 8px;
+    padding: 0.25rem 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--mona-text);
     top: 10px;
     & fa-icon {
-        margin-right: 4px;
+        margin-right: 0.25rem;
     }
 }
 
