--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1477,6 +1477,39 @@ button[monaButton].mona-input-button {
     }
 }
 
+
+.mona-neo-splitter {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.mona-neo-splitter-resizer {
+    background-color: var(--mona-background-dark);
+    color: var(--mona-text);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    &-horizontal {
+        cursor: col-resize;
+        width: 8px;
+        border-left: 1px solid var(--mona-border-color);
+        border-right: 1px solid var(--mona-border-color);
+        flex-direction: column;
+    }
+    &-vertical {
+        cursor: row-resize;
+        height: 8px;
+        border-top: 1px solid var(--mona-border-color);
+        border-bottom: 1px solid var(--mona-border-color);
+    }
+    & button {
+        z-index: 1;
+    }
+}
+
 /** Tab Strip */
 .mona-tab-strip {
     width: 100%;
