--- a/projects/mona-ui/src/lib/layout/neo-splitter/components/neo-splitter-resizer/neo-splitter-resizer.component.html
+++ b/projects/mona-ui/src/lib/layout/neo-splitter/components/neo-splitter-resizer/neo-splitter-resizer.component.html
@@ -1,3 +1,1 @@
-<button monaButton [flat]="true" (click)="toggle('previous', $event)">p</button>
-<fa-icon [icon]="ellipsisIcon()"></fa-icon>
-<button monaButton [flat]="true" (click)="toggle('next', $event)">n</button>
+<div class="mona-neo-splitter-resizer-handle"></div>
