--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <mona-splitter orientation="horizontal">
-        <mona-splitter-pane [size]="300" [collapsible]="true">
+        <mona-splitter-pane [size]="300">
 <!--            <mona-tree-->
 <!--                    [data]="treeData"-->
 <!--                    monaTreeCheckable-->
@@ -748,7 +748,7 @@
                     <ng-template monaTabContentTemplate>
                         <div style="width: 100%; height: 100%;">
                             <mona-splitter style="height: 100%;" orientation="vertical">
-                                <mona-splitter-pane [collapsible]="true">
+                                <mona-splitter-pane>
                                     <div style="width: 100%; height: 100%; padding: 20px;">
                                         <mona-scroll-view [data]="scrollViewData" [width]="960" [height]="540"
                                                           [index]="scrollViewData.length-6"
@@ -759,9 +759,9 @@
                                         </mona-scroll-view>
                                     </div>
                                 </mona-splitter-pane>
-                                <mona-splitter-pane [collapsible]="true">
+                                <mona-splitter-pane [size]="275">
                                     <mona-splitter orientation="horizontal">
-                                        <mona-splitter-pane [collapsible]="true">
+                                        <mona-splitter-pane>
                                             <div style="width: 100%; height: 100%; padding: 20px;">
                                                 <mona-calendar [(ngModel)]="calendarValue"
                                                                [min]="calendarMinValue()"
@@ -770,7 +770,7 @@
                                                                style="width: 300px;"></mona-calendar>
                                             </div>
                                         </mona-splitter-pane>
-                                        <mona-splitter-pane [collapsible]="true">
+                                        <mona-splitter-pane>
                                             <div style="width: 100%; height: 100%; padding: 20px;">
                                                 <mona-color-palette></mona-color-palette>
                                             </div>
@@ -778,7 +778,7 @@
                                     </mona-splitter>
 
                                 </mona-splitter-pane>
-                                <mona-splitter-pane [collapsible]="true" [resizable]="false" [size]="40">
+                                <mona-splitter-pane [size]="40" [resizable]="false">
                                     <div style="width: 100%; height: 100%; padding: 2px;">
                                         <mona-drop-down-list [data]="[1,2,3,4,5,6,7,8,9]"></mona-drop-down-list>
                                         <mona-drop-down-button>
@@ -798,28 +798,6 @@
                                 </mona-splitter-pane>
                             </mona-splitter>
                         </div>
-                    </ng-template>
-                </mona-tab>
-                <mona-tab title="Neo Splitter">
-                    <ng-template monaTabContentTemplate>
-                        <mona-neo-splitter>
-                            <mona-neo-splitter-pane>
-                                <button monaButton>Pane 1</button>
-                            </mona-neo-splitter-pane>
-                            <mona-neo-splitter-pane [size]="400">
-                                <button monaButton>Pane 2</button>
-                            </mona-neo-splitter-pane>
-                            <mona-neo-splitter-pane [size]="300">
-                                <mona-neo-splitter orientation="vertical">
-                                    <mona-neo-splitter-pane [size]="400">
-                                        <button monaButton>Vertical Splitter Pane 1</button>
-                                    </mona-neo-splitter-pane>
-                                    <mona-neo-splitter-pane >
-                                        <button monaButton>Vertical Splitter Pane 2</button>
-                                    </mona-neo-splitter-pane>
-                                </mona-neo-splitter>
-                            </mona-neo-splitter-pane>
-                        </mona-neo-splitter>
                     </ng-template>
                 </mona-tab>
                 <mona-tab *ngFor="let t of tabData" title="TAB TITLE: {{t.title}}" [closable]="true"></mona-tab>
