--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -1466,26 +1466,13 @@ button[monaButton].mona-input-button {
 
 /** Splitter */
 .mona-splitter {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    overflow: hidden;
-    &.mona-splitter-vertical {
-        flex-direction: column;
-    }
-}
-
-
-.mona-neo-splitter {
     display: grid;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-.mona-neo-splitter-resizer {
+.mona-splitter-resizer {
     background-color: var(--mona-background);
     color: var(--mona-text);
     display: flex;
@@ -1494,14 +1481,12 @@ button[monaButton].mona-input-button {
     position: relative;
     transition: background-color 0.15s ease-in;
     &-horizontal {
-        cursor: col-resize;
         width: 4px;
         border-left: 1px solid var(--mona-border-color);
         border-right: 1px solid var(--mona-border-color);
         flex-direction: column;
     }
     &-vertical {
-        cursor: row-resize;
         height: 4px;
         border-top: 1px solid var(--mona-border-color);
         border-bottom: 1px solid var(--mona-border-color);
@@ -1511,15 +1496,15 @@ button[monaButton].mona-input-button {
     }
 }
 
-.mona-neo-splitter-resizer-handle {
+.mona-splitter-resizer-handle {
     background: var(--mona-background-lighter);
 }
 
-.mona-neo-splitter-resizer-horizontal .mona-neo-splitter-resizer-handle {
+.mona-splitter-resizer-horizontal .mona-splitter-resizer-handle {
     width: 100%;
     height: 24px;
 }
-.mona-neo-splitter-resizer-vertical .mona-neo-splitter-resizer-handle {
+.mona-splitter-resizer-vertical .mona-splitter-resizer-handle {
     width: 24px;
     height: 100%;
 }
