--- a/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
+++ b/projects/mona-ui/src/lib/common/tree/components/sub-tree/sub-tree.component.html
@@ -1,7 +1,7 @@
-<ul class="mona-sub-tree" [style.padding-left.px]="paddingLeft()"
+<ul class="mona-sub-tree"
     cdkDropList [cdkDropListSortingDisabled]="true" (cdkDropListDropped)="onNodeDrop($event)">
     @for (node of nodeSet(); track node.uid) {
-        <li [style.padding-left.px]="nodeComponent.paddingLeft()"
+        <li
             [attr.data-uid]="node.uid"
             [tabindex]="0"
             (focus)="treeService.navigatedNode.set(node)"
